<resources>
    <string name="app_name">Little Paw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_password">Password</string>
    <string name="promt_location">Location</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="location">Location</string>
    <string name="location_icon">Location icon</string>
    <string name="search_text">Search pet to adopt</string>
    <string name="pet_image_in_card_item">Pet image in card item</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="save_password">Save Password</string>
    <string name="posting_pet_dialog_message">Posting your pet, please wait...</string>
</resources>