<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".changepassscreen.ChangePasswordActivity">

    <TextView
        android:id="@+id/changePasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/anybody"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextOldPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextOldPassword" />

    <EditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:ems="10"
        android:maxWidth="100dp"
        android:padding="15dp"
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextNewPassword" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:ems="10"
        android:maxWidth="100dp"
        android:padding="15dp"
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRepeatNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOldPassword" />

    <TextView
        android:id="@+id/textViewRepeatNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_new_password"
        android:textColor="@color/secondary"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextRepeatNewPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextRepeatNewPassword" />

    <EditText
        android:id="@+id/editTextRepeatNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        android:ems="10"
        android:maxWidth="100dp"
        android:padding="15dp"
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_save_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

    <Button
        android:id="@+id/button_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:text="@string/save_password"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:cornerRadius="10dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>