<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".RegisterActivity">


        <TextView
            android:id="@+id/fullNameHintRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full name"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextFullNameRegister"

            app:layout_constraintStart_toStartOf="@+id/editTextFullNameRegister" />

        <TextView
            android:id="@+id/littlePawTitleRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="LittlePaw"
            android:textColor="@color/secondary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/appIconRegisterScreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appIconRegisterScreen"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/appIconRegisterScreen"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:layout_marginTop="64dp"
            app:layout_constraintEnd_toStartOf="@+id/littlePawTitleRegisterScreen"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/paw" />

    <EditText
        android:id="@+id/editTextFullNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appIconRegisterScreen" />

    <EditText
        android:id="@+id/editTextEmailAddressRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFullNameRegister"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddressRegister"
        app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPasswordProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRepeatPasswordProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/prompt_repeat_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:text=""
        android:textColorHint="#B3B7B7"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/editTextPasswordProfile"
        app:layout_constraintBottom_toTopOf="@+id/locationPickerRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hbb20.CountryPickerView
        android:id="@+id/locationPickerRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/border"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRepeatPasswordProfile" />

    <TextView
            android:id="@+id/emailHintRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email address"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddressRegister"

            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressRegister" />

        <TextView
            android:id="@+id/passwordHintRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordProfile"

            app:layout_constraintStart_toStartOf="@+id/editTextPasswordProfile" />

        <TextView
            android:id="@+id/repeatPasswordHintRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Repeat password"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPasswordProfile"

            app:layout_constraintStart_toStartOf="@+id/editTextRepeatPasswordProfile" />

        <TextView
            android:id="@+id/locationHintRegisterScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/locationPickerRegister"

            app:layout_constraintStart_toStartOf="@+id/locationPickerRegister" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/secondary"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/locationPickerRegister"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>