<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.InputType"/>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.upb.littlepaw.changepassscreen.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/changePasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".changepassscreen.ChangePasswordFragment">

        <TextView
            android:id="@+id/changePasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/anybody"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/old_password"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardViewOldPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewOldPassword" />

        <TextView
            android:id="@+id/textViewErrorOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:text="@{viewModel.errorOldPassword}"
            android:textColor="#FF0000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardViewOldPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOldPassword" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewOldPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="9dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardViewNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordTitle"
            app:layout_constraintVertical_chainStyle="packed"
            app:strokeColor="#00000000"
            app:strokeWidth="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOldPassword"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.CustomStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/secondary"
                app:boxBackgroundColor="@color/secondary"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="50dp"
                    android:paddingStart="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/old_password"
                    android:inputType="@{viewModel.showOldPassword ? InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    android:text="@={viewModel.oldPassword}"
                    android:textColor="@color/primary"
                    android:textColorHint="#F1D284"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShowOldPassword"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4.5dp"
                android:layout_gravity="center_vertical|end"
                android:backgroundTint="@{viewModel.showOldPassword ? @color/primary : @color/secondary}"
                android:onClick="@{() -> viewModel.setShowOldPassword(!viewModel.showOldPassword)}"
                app:icon="@{viewModel.showOldPassword ? @drawable/ic_visibility : @drawable/ic_visibility_off}"
                app:iconTint="@{viewModel.showOldPassword ? @color/secondary : @color/primary}"
                app:iconSize="24dp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textViewNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/new_password"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardViewNewPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewNewPassword" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="9dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOldPassword"
            app:layout_constraintBottom_toBottomOf="@id/textViewErrorNewPassword"
            app:layout_constraintVertical_chainStyle="packed"
            app:strokeColor="#00000000"
            app:strokeWidth="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNewPassword"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.CustomStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/secondary"
                app:boxBackgroundColor="@color/secondary"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingEnd="50dp"
                    android:paddingStart="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/new_password"
                    android:inputType="@{viewModel.showNewPassword ? InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    android:text="@={viewModel.newPassword}"
                    android:textColor="@color/primary"
                    android:textColorHint="#F1D284"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShowNewPassword"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4.5dp"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@{viewModel.showNewPassword ? @color/primary : @color/secondary}"
            android:onClick="@{() -> viewModel.setShowNewPassword(!viewModel.showNewPassword)}"
            app:icon="@{viewModel.showNewPassword ? @drawable/ic_visibility : @drawable/ic_visibility_off}"
            app:iconTint="@{viewModel.showNewPassword ? @color/secondary : @color/primary}"
            app:iconSize="24dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textViewErrorNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="34dp"
            android:text="@{viewModel.errorNewPassword}"
            android:textColor="#FF0000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardViewRepeatNewPassword"
            app:layout_constraintEnd_toEndOf="@+id/cardViewNewPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/cardViewNewPassword" />


        <TextView
            android:id="@+id/textViewRepeatNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/repeat_new_password"
            android:textColor="@color/secondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardViewRepeatNewPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewRepeatNewPassword" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewRepeatNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="9dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewErrorRepeatNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewErrorNewPassword"
            app:layout_constraintVertical_chainStyle="packed"
            app:strokeColor="#00000000"
            app:strokeWidth="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutRepeatNewPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/secondary"
            app:boxBackgroundColor="@color/secondary"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextRepeatNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="50dp"
                android:paddingStart="15dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/repeat_new_password"
                android:inputType="@{viewModel.showRepeatNewPassword ? InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_CLASS_TEXT | InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                android:text="@={viewModel.repeatNewPassword}"
                android:textColor="@color/primary"
                android:textColorHint="#F1D284"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShowRepeatNewPassword"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4.5dp"
            android:layout_gravity="center_vertical|end"
            android:backgroundTint="@{viewModel.showRepeatNewPassword ? @color/primary : @color/secondary}"
            android:onClick="@{() -> viewModel.setShowRepeatNewPassword(!viewModel.showRepeatNewPassword)}"
            app:icon="@{viewModel.showRepeatNewPassword ? @drawable/ic_visibility : @drawable/ic_visibility_off}"
            app:iconTint="@{viewModel.showRepeatNewPassword ? @color/secondary : @color/primary}"
            app:iconSize="24dp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textViewErrorRepeatNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:text="@{viewModel.errorRepeatNewPassword}"
            android:textColor="#FF0000"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonSavePassword"
            app:layout_constraintEnd_toEndOf="@+id/cardViewRepeatNewPassword"
            app:layout_constraintStart_toStartOf="@+id/cardViewRepeatNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/cardViewRepeatNewPassword" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/buttonSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:backgroundTint="@{viewModel.buttonEnabled ? @color/secondary : @color/secondary_disabled}"
            android:text="@string/save_password"
            android:textColor="@{viewModel.buttonEnabled ? @color/white : @color/on_secondary_text_disabled}"
            android:enabled="@{viewModel.buttonEnabled}"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>